# coursework-computer-graphics

./: .gitattributes  .gitignore  .gitmodules  LICENSE  readme.md
report/: 00-abstract.tex  00-title.tex  12-intro.tex  20-analysis.tex  30-design.tex  40-impl.tex  50-research.tex  80-conclusion.tex  81-biblio.tex  90-appendix1.tex  G2-105.sty  G7-32.sty  GostBase.clo  in.info  leqno.clo  listings.inc.tex  preamble.inc.tex  rpz.bib  rpz.tex
src/: CMakeLists.txt
src/gui/: MainWindow.ui  mainwindow.ui
src/include/: Widget.h
src/include/Commands/: ActionMove.h  AddCamera.h  AddParticle.h  Command.h  Draw.h  Load.h  MoveCamera.h  Offset.h  Rotate.h  RotateCamera.h  Save.h  Scale.h
src/include/Drawing/: Drawer.h  GLDraw.h  QtDraw.h
src/include/Finder/: File.h
src/include/Managers/: DeleteManager.h  DrawManager.h  ExceptionManager.h  FileManager.h  Manager.h  TransformManager.h
src/include/Math/: Matrix.h
src/include/Noise/: TileableVolumeNoise.h
src/include/Object/: Builder.h  Camera.h  ComposeObject.h  Edge.h  Model.h  Object.h  Particle.h  Point2D.h  Point3D.h  Position.h  UnvisibleObject.h  VisibleObject.h
src/include/Objects/: Particle.h  SkyBox.h
src/include/Scene/: Iterator.h  Scene.h  SceneContainer.h
src/include/Widget/: MainWindow.h  Widget.h
src/include/Window/: MainWindow.h  OpenGLWidget.h
src/shaders/: depth.fsh  depth.vsh  fSkyBox.fsh  fshader.fsh  vshader.vsh
src/skybox/: ame_rocky.shader  rockyvalley_ft.tga  rockyvalley_lf.tga  rockyvalley_rt.tga
src/skycube/: rockyvalley_bk.tga  rockyvalley_dn.tga  rockyvalley_up.tga
src/source/: Particle.cc  Widget.cc  main.cc
src/source/Commands/: AddParticle.cc  Draw.cc  Load.cc  MoveCamera.cc  Offset.cc  Rotate.cc  RotateCamera.cc  Save.cc  Scale.cc
src/source/Drawing/: GLDraw.cc  QtDraw.cc
src/source/Finder/: File.cc
src/source/Managers/: DrawManager.cc  FileManager.cc  TransformManager.cc
src/source/Math/: Matrix.cc  TileableVolumeNoise.cc
src/source/Noise/: TileableVolumeNoise.cc
src/source/Object/: Builder.cc  Camera.cc  Model.cc  Particle.cc  Point2D.cc  Point3D.cc  Position.cc
src/source/Objects/: Particle.cc  SkyBox.cc
src/source/Scene/: SceneContainer.cc
src/source/Widget/: Camera.cc  Control.cc  Draw.cc  mainwindow.cc
src/source/Window/: MainWindow.cc  OpenGLWidget.cc
src/txt_figures/: cube.txt  octahedron.txt  pyramid.txt
